@@ -1,6 +1,6 @@
 .\" Copyright (c) 1995, 1996 Index Data
 .\" All rights reserved.
-.\" $Id: ir-set.n,v 1.2 1996-06-24 16:24:39 adam Exp $
+.\" $Id: ir-set.n,v 1.3 1996-11-14 17:11:13 adam Exp $
 .TH ir-set N  "24 June 1996" "IrTcl" "IR Set"
 .SH NAME
 ir-set \- IR  set
@@ -174,5 +174,9 @@ encoded as a single Tcl token. The \fIdata-type\fR \fBbool\fR is encoded
 as 0 or 1 for false and true respectively. If the \fIdata-type\fR is
 \fBsubtree\fR the \fIdata\fR is a sub-list. In all other cases, the
 \fIdata\fR is the empty string.
+.TP
+.BI "" zs " getExplain " position " [" pattern " " pattern " " ... "]"
+The Explain record on the specified position is returned. See the
+manual for a detailed explanation.
 .SH "SEE ALSO"
 .BR ir-assoc "(n)", " " ir-scan "(n)"
